# pdf-lib

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  vitest.config.ts
.github/workflows/: CI.yml
__test__/: index.spec.mjs  index.unit.test.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
pdfium-linux-arm64/: PDFiumConfig.cmake
pdfium-linux-x64/: PDFiumConfig.cmake
pdfium-mac-arm64/: PDFiumConfig.cmake
pdfium-mac-x64/: args.gn
src/: lib.rs
